--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body>
     <h3>Score: <span id="result"></span></h3>
     <div id="grid"></div>
-    <scrypt src="app.js"></scrypt>
+    <script src="app.js"></script>
   </body>
 </html>
