--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h3>Score: <span id="result"></span></h3>
-    <div id="grid"></div>
+    <div class="grid"></div>
     <script src="app.js"></script>
   </body>
 </html>
